# risc_zero_lsag_verifier

./: README.md  output.txt  profile.pb
contracts/: ILsagVerifier.sol  LsagVerifier.sol  README.md
host/: Cargo.toml  output.txt
host/src/: main.rs
methods/: Cargo.toml  README.md
methods/guest/: Cargo.toml  README.md  makefile
methods/guest/scripts/: pre-commit
methods/guest/src/: lib.rs  lsag_verifier.rs  main.rs
methods/guest/src/lsag/: compute.rs  conversion.rs  minimal.rs  mod.rs  verifier.rs
methods/guest/src/lsag_verifier/: conversion.rs  lsag_verifier.rs  minimal.rs  mod.rs
methods/guest/src/utils/: hash_to_secp256k1.rs  keccak256.rs  mod.rs  scalar_from_hex.rs  serialize_point.rs  serialize_ring.rs  sha256.rs  test_utils.rs
script/: Deploy.s.sol
