[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "=1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
sha2 = "0.10.8"
k256 = {version ="0.13.3", features=["hash2curve"]}
chrono = "0.4.38"
