[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
risc0-zkvm = { workspace = true, features = ["client","std"] }
sha3 = "0.10.6"
sha2 = "0.10.8"
k256 = {version ="0.13.3", features=["hash2curve", "expose-field"]}
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.10.6"
base64 = "0.22.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ethabi = "18.0.0"


[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"} 
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }


[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client","std"] }
